<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/common_5dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/xlarge_txt_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_about_versionname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/common_5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_3dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_10dp"
                android:text="About"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_title2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_3dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_1dp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_10dp"
                android:text="@string/about_us_content"
                android:textSize="@dimen/textsize_content1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_3dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_10dp"
                android:text="@string/developed_by"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_title2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_3dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_1dp" />

            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:padding="@dimen/common_10dp"
                android:text="Name : R.Ranjith kumar\nEmail  : rranjithkumar100@gmail.com"
                android:textSize="@dimen/textsize_content1" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>